--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Purple Rose Bloom</title>
+		<title>Blessed Saturday</title>
 		<link rel="stylesheet" href="style.css" />
 		<style>
 			body {
@@ -81,7 +81,7 @@
 				left: 50%;
 				transform: translateX(-50%);
 				color: #e0b3ff;
-				font-size: 4rem;
+				font-size: 3.5rem;
 				font-weight: bold;
 				text-shadow: 0 0 15px rgba(184, 77, 255, 0.9);
 				animation: fadeIn 3s ease-in-out forwards;
@@ -102,7 +102,7 @@
 	</head>
 	<body class="not-loaded">
 		<div class="night"></div>
-		<div class="greeting-text">Hi Kat👋🤍</div>
+		<div class="greeting-text">Blessed Saturday din po😇🤍</div>
 		<div class="flowers">
 			<div class="flower flower--1">
 				<div class="flower__leafs flower__leafs--1">
