--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<style>
 			body {
-				background: radial-gradient(circle at center, #1a001f, #000);
+				background: url("d1491cef-9e0b-44d2-bb57-54b2c624a3ff.png") center
+						bottom no-repeat,
+					radial-gradient(circle at center, #1a001f, #000);
+				background-size: contain, cover;
 				display: flex;
 				padding-bottom: 300px;
 				padding-right: 20px;
@@ -138,32 +141,24 @@
 				left: 65%;
 				transform: translateX(-50%);
 			}
-
-			.city-view {
-				position: absolute;
-				bottom: 0;
-				left: 0;
-				width: 100%;
-				height: 200px;
-				background: url("city-silhouette.jpg") repeat-x;
-				background-size: contain;
-				animation: cityMove 20s linear infinite;
-				z-index: 0;
-			}
-
-			@keyframes cityMove {
-				from {
-					background-position: 0 0;
-				}
-				to {
-					background-position: -1000px 0;
-				}
-			}
 		</style>
 	</head>
 	<body class="not-loaded">
 		<div class="night"></div>
 		<div class="city-view"></div>
+
+		<section>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+			<span></span>
+		</section>
 		<div class="moon">
 			<img src="cat1.gif" class="cat-gif cat-left" />
 			<img src="cat2.gif" class="cat-gif cat-right" />
@@ -172,7 +167,7 @@
 			<img class="cat-gif cat-left" src="cat.gif" alt="Cute Cat" />
 			<img class="cat-gif cat-right" src="cat2.gif" alt="Cute Cat" />
 		</div>
-		<div class="flowers">
+		<div class="flowers flowers-background">
 			<div class="flower flower--1">
 				<div class="flower__leafs flower__leafs--1">
 					<div class="flower__leaf flower__leaf--1"></div>
