--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				justify-content: center;
 				align-items: end;
 				justify-items: end;
+				overflow: hidden;
 				height: 100vh;
 				overflow: hidden;
 			}
