--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- <div class="greeting-text">Blessed Sunday po🤍😇🙌</div> -->
+		<div class="greeting-text">Blessed Sunday po🤍😇🙌</div>
 	</body>
 	<script src="script.js"></script>
 </html>
